# mle-training

./: README.md  env.yml  example_shantanu_yadav3-0.0.2-py3-none-any.whl  nonstandardcode.py
assignment_1.1/: environment.yml  first.py  spec-file.txt
assignment_1.1/recorded_sessions/: my_conda_session  my_unix_session
assignment_1.2/: nonstandardcode.py
assignment_1.3/: .gitignore  nonstandardcode.py
assignment_1.4/: README.md
assignment_1.5/: .gitignore  nonstandardcode.py
assignment_2.1/: .gitignore
assignment_2.2/doc/source/: conf.py
assignment_2.2/src/: train.py
assignment_3.1/: setup.py
assignment_3.2/: nonstandardcode.py
assignment_3.2/config/: pyproject.toml
assignment_4.1/: README.md  environment.yml  nonstandardcode.py  setup.py
assignment_4.1/config/: LICENCE
assignment_4.1/src/mlflow/: mlflow_code.py
assignment_4.1/src/shantanuyadav.egg-info/: PKG-INFO
assignment_4.2/: Dockerfile
assignment_4.2.3/: Dockerfile  setup.py
assignment_4.2.3/config/: pyproject.toml
assignment_4.2.3/notebooks/shantanu/: housing price prediction.ipynb
assignment_4.2.3/src/shantanuyadav/: score.py
assignment_4.2/models/: imputer.sav
assignment_4.2/src/: nonstandardcode.py
assignment_4.2/src/shantanuyadav.egg-info/: SOURCES.txt  top_level.txt
config/: env.yml
example_shantanu_yadav3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: ingest_data.py  nonstandardcode.py  train.py
src/mypackage.egg-info/: SOURCES.txt  requires.txt  top_level.txt
tce/: tutorial_solution.ipynb
(+1 files in other folders)
