[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools", "pandas"]
build-backend = "setuptools.build_meta"

[project]
name = "shantanuyadav"
version = "0.0.7"
authors = [
  { name="Shantanu Yadav", email="shantanu.yadav@tigeranalytics.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]


[project.urls]
"Homepage" = "https://github.com/shantanuyadav3/mle-training"
"Bug Tracker" = "https://github.com/shantanuyadav3/mle-training/issues"